tests/baselines/reference/indexSignatureWithInitializer.errors.txt
tests/cases/compiler/indexSignatureWithInitializer.ts(3,5): error TS1169: Computed property names are not allowed in interfaces.
tests/cases/compiler/indexSignatureWithInitializer.ts(3,6): error TS2304: Cannot find name 'x'.
tests/cases/compiler/indexSignatureWithInitializer.ts(7,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/compiler/indexSignatureWithInitializer.ts(7,6): error TS2304: Cannot find name 'x'.


==== tests/cases/compiler/indexSignatureWithInitializer.ts (4 errors) ====
    // These used to be indexers, now they are computed properties
    interface I {
        [x = '']: string;
        ~~~~~~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
         ~
!!! error TS2304: Cannot find name 'x'.
    }
    
    class C {
        [x = 0]: string
        ~~~~~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
         ~
!!! error TS2304: Cannot find name 'x'.
    }